# goit-pythonweb-hw-012

./: main.py  pyproject.toml  pytest.ini  test.db
alembic/versions/: 61523c94862c_add_role_to_users.py  61a596db25a5_add_role_to_user.py
docs/: conf.py  index.rst  modules.rst
src/: schemas.py
src/api/: auth.py  contacts.py  users.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  cache.py  cloudinary.py  contacts.py  email.py  users.py
src/services/templates/: reset_password.html  reset_password_form.html
tests/: conftest.py  test_contact_repository_unit.py  test_email_service.py  test_integration_auth.py  test_integration_contacts.py  test_integration_users.py  test_user_repository_unit.py
